--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -20,7 +22,12 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
+    "react-typical": "^0.1.3",
+    "recharts": "^2.12.7",
+    "swiper": "^11.1.12",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
