user profile edit

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0"
   }
 }
