--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "crypto": "^1.0.1",
     "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "razorpay": "^2.9.4",
+    "react-datepicker": "^7.3.0"
   }
 }
